fix: getOrderItems 메서드를 불변 객체 리턴으로 수정